--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -55,6 +55,6 @@ set -w -g utf8 on
 set -w -g automatic-rename on
 set -w -g mode-keys vi
 set -w -g window-status-current-fg yellow
-set -w -g window-status-current-format "[#I:#T #W]"
-set -w -g window-status-format         "[#I:#T #W]"
+set -w -g window-status-current-format "[#I.#P:#T #W]"
+set -w -g window-status-format         "[#I.#P:#T #W]"
 
