--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -3,6 +3,8 @@ set -g prefix C-a
 bind C-a send-prefix
 set -s escape-time 0
 
+set -g default-terminal rxvt-unicode-256color
+
 unbind [
 bind Escape copy-mode
 bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
