use screen-256color term

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -3,7 +3,7 @@ set -g prefix C-a
 bind C-a send-prefix
 set -s escape-time 0
 
-set -g default-terminal rxvt-unicode-256color
+set -g default-terminal screen-256color
 
 unbind [
 bind Escape copy-mode
