just show window/pane indexes

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -57,6 +57,6 @@ set -w -g utf8 on
 set -w -g automatic-rename on
 set -w -g mode-keys vi
 set -w -g window-status-current-fg yellow
-set -w -g window-status-current-format "[#I.#P:#T #W]"
-set -w -g window-status-format         "[#I.#P:#T #W]"
+set -w -g window-status-current-format "[#I.#P]"
+set -w -g window-status-format         "[#I.#P]"
 
