don't use a login shell with tmux

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-a
 bind C-a send-prefix
 set -s escape-time 0
 
+set -g default-command bash
 set -g default-terminal screen-256color
 
 unbind [
