--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -11,11 +11,11 @@ bind Escape copy-mode
 bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
 
 unbind %
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"
 
 unbind '"'
 unbind s
-bind s split-window -v
+bind s split-window -v -c "#{pane_current_path}"
 
 bind S choose-session
 
