get clipboard copy working in tmux
also add mouse on/off bindings, and try having mouse mode on by default

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -6,9 +6,16 @@ set -s escape-time 0
 set -g default-command bash
 set -g default-terminal screen-256color
 
+set -g mode-mouse on
+bind m set -g mode-mouse on
+bind M set -g mode-mouse off
+
 unbind [
 bind Escape copy-mode
-bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
+
+unbind -t vi-copy Enter
+bind   -t vi-copy Enter copy-pipe 'xsel -i'
+bind   -t vi-copy c     copy-pipe 'xsel -i'
 
 unbind %
 bind v split-window -h -c "#{pane_current_path}"
