bind and bind-key are the same
be consistent and use the shorter name

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -29,26 +29,26 @@ bind S choose-session
 unbind p
 bind p paste-buffer -r
 
-bind-key -n 'M-p' previous-window
-bind-key -n 'M-n' next-window
+bind -n 'M-p' previous-window
+bind -n 'M-n' next-window
 
-bind-key -n 'M-h' select-pane -L
-bind-key -n 'M-l' select-pane -R
-bind-key -n 'M-k' select-pane -U
-bind-key -n 'M-j' select-pane -D
+bind -n 'M-h' select-pane -L
+bind -n 'M-l' select-pane -R
+bind -n 'M-k' select-pane -U
+bind -n 'M-j' select-pane -D
 
-bind-key -n 'M-0' select-window -t :0
-bind-key -n 'M-1' select-window -t :1
-bind-key -n 'M-2' select-window -t :2
-bind-key -n 'M-3' select-window -t :3
-bind-key -n 'M-4' select-window -t :4
-bind-key -n 'M-5' select-window -t :5
-bind-key -n 'M-6' select-window -t :6
-bind-key -n 'M-7' select-window -t :7
-bind-key -n 'M-8' select-window -t :8
-bind-key -n 'M-9' select-window -t :9
+bind -n 'M-0' select-window -t :0
+bind -n 'M-1' select-window -t :1
+bind -n 'M-2' select-window -t :2
+bind -n 'M-3' select-window -t :3
+bind -n 'M-4' select-window -t :4
+bind -n 'M-5' select-window -t :5
+bind -n 'M-6' select-window -t :6
+bind -n 'M-7' select-window -t :7
+bind -n 'M-8' select-window -t :8
+bind -n 'M-9' select-window -t :9
 
-bind-key -n 'M-q' kill-pane
+bind -n 'M-q' kill-pane
 
 set -g set-titles off
 set -g set-titles-string '#W'
