try to finally nail down X11 copy/paste
in tmux and urxvt save copy selection to _both_ primary and clipboard
buffers using xsel

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -14,8 +14,8 @@ unbind [
 bind Escape copy-mode
 
 unbind -t vi-copy Enter
-bind   -t vi-copy Enter copy-pipe 'xsel -i'
-bind   -t vi-copy c     copy-pipe 'xsel -i'
+bind   -t vi-copy Enter copy-pipe 'xsel -pi && xsel -po | xsel -bi'
+bind   -t vi-copy c     copy-pipe 'xsel -pi && xsel -po | xsel -bi'
 
 unbind %
 bind v split-window -h -c "#{pane_current_path}"
