set tmux window title to something meaningful
when on the shell set it to 'bash on user@host:/path'

when running a command set it to the full commandline

use the bash-preexec script which provides zsh like preexec/precmd hooks

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/vim-easy-align"]
 	path = vim/bundle/vim-easy-align
 	url = https://github.com/junegunn/vim-easy-align.git
+[submodule "bashrc.d/bash-preexec"]
+	path = bashrc.d/bash-preexec
+	url = git@github.com:rcaloras/bash-preexec.git
