--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -50,8 +50,8 @@ bind -n 'M-9' select-window -t :9
 
 bind -n 'M-q' kill-pane
 
-set -g set-titles off
-set -g set-titles-string '#W'
+set -g set-titles on
+set -g set-titles-string '#T'
 set -g status-bg colour237
 set -g status-fg black
 set -g message-bg colour202
