--- a/.gitmodules
+++ b/.gitmodules
@@ -24,4 +24,4 @@
 	url = https://github.com/junegunn/vim-easy-align.git
 [submodule "bashrc.d/bash-preexec"]
 	path = bashrc.d/bash-preexec
-	url = git@github.com:rcaloras/bash-preexec.git
+	url = https://github.com/rcaloras/bash-preexec.git
