add key binding for pasting clipboard buffer
<prefix>+b in tmux

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -16,6 +16,7 @@ bind Escape copy-mode
 unbind -t vi-copy Enter
 bind   -t vi-copy Enter copy-pipe 'xsel -pi && xsel -po | xsel -bi'
 bind   -t vi-copy c     copy-pipe 'xsel -pi && xsel -po | xsel -bi'
+bind b run 'tmux set-buffer -- $(xsel -b); tmux paste-buffer'
 
 unbind %
 bind v split-window -h -c "#{pane_current_path}"
