updates for tmux 2.1

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -5,9 +5,9 @@ set -s escape-time 0
 
 set -g default-terminal screen-256color
 
-set -g mode-mouse on
-bind m set -g mode-mouse on
-bind M set -g mode-mouse off
+set -g mouse on
+bind m set -g mouse on
+bind M set -g mouse off
 
 unbind [
 bind Escape copy-mode
