try vim-statline for statusline
kill custom syntastic statusline format, was clobbering default
statusline anyways

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim/bundle/vim-statline"]
+	path = vim/bundle/vim-statline
+	url = https://github.com/millermedeiros/vim-statline.git
