add EnchantedVim and turn on very magic substitute
very magic search is on by default

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,9 @@
 [submodule "vim/bundle/vim-statline"]
 	path = vim/bundle/vim-statline
 	url = https://github.com/millermedeiros/vim-statline.git
+[submodule "vim/bundle/CRDispatcher"]
+	path = vim/bundle/CRDispatcher
+	url = https://github.com/coot/CRDispatcher.git
+[submodule "vim/bundle/EnchantedVim"]
+	path = vim/bundle/EnchantedVim
+	url = https://github.com/coot/EnchantedVim.git
