--- a/etc/tmux1.9.conf
+++ b/etc/tmux1.9.conf
@@ -5,6 +5,7 @@ set -s escape-time 0
 
 set -g default-terminal screen-256color
 
+set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
